--- a/dash-roles/public/web/css/style.css
+++ b/dash-roles/public/web/css/style.css
@@ -4148,7 +4148,9 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
 .bg-c-pink{
     background: linear-gradient(45deg,#ff869a,#ff5370);
 }
-
+.bg-c-orange{
+    background: linear-gradient(45deg,#ffa600,#ff5e00);
+}
 .card{
     -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
     box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
